--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ metadata_index/
 data/kme_content/metadata_index/_MAIN_0.toc
 data/kme_content_summarized/metadata_index/_MAIN_0.toc
 *.env
+*.xlsx
+content/*
