--- a/requirements.txt
+++ b/requirements.txt
@@ -2,22 +2,20 @@ faiss-cpu
 openai
 pandas
 pdfplumber
-ipykernel
 PyMuPDF
 python-dotenv
 jinja2
 jsonschema
-dash
 streamlit
 pydantic-settings
-typer[all]
+typer
 streamlit-aggrid==1.1.7
-nicegui
 Whoosh-Reloaded
 tiktoken
 JsonExtractor
 openpyxl
-mlflow
-azureml-mlflow
 st-combobox
-azure-identity-broker
+azure-storage-blob
+azure-identity
+bcrypt
+extra-streamlit-components
